fixed form and removed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 * {
   cursor: none;
@@ -88,6 +88,11 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media(max-width: 1024px){
+  body{
+    overflow: auto;
+  }
 }
 @import "fonts.css"; /* Font Files */
 @import "cursor.css"; /* Cursor Files */
